--- a/pom.xml
+++ b/pom.xml
@@ -6,28 +6,44 @@
     <parent>
         <groupId>com.rbkmoney</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
+        <version>2.3.4.RELEASE</version>
     </parent>
 
     <artifactId>dark-api</artifactId>
-    <version>0.1.8-SNAPSHOT</version>
+    <version>0.1.9-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>dark-api</name>
     <description></description>
 
     <properties>
-        <damsel.version>1.410-234ab2f</damsel.version>
-        <sonar.jacoco.reportPaths>target/sites/jacoco/jacoco.exec</sonar.jacoco.reportPaths>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
         <server.port>8080</server.port>
         <exposed.ports>${server.port}</exposed.ports>
-        <dockerfile.base.service.tag>bc95d0d6dc13c693acd2b274531a7d604b877bf3</dockerfile.base.service.tag>
-        <dockerfile.registry>dr2.rbkmoney.com</dockerfile.registry>
-        <shared.resources.version>0.3.6</shared.resources.version>
+        <dockerfile.base.service.tag>57e26d8ee999d7b0b50248c22afc63e6f926d276</dockerfile.base.service.tag>
+        <dockerfile.registry>${env.REGISTRY}</dockerfile.registry>
         <mapstruct.processor.version>1.3.0.Final</mapstruct.processor.version>
+        <custom-actuator-endpoints.version>0.0.4</custom-actuator-endpoints.version>
+        <spring-boot-starter-metrics-statsd.version>1.1.2</spring-boot-starter-metrics-statsd.version>
+        <woody-thrift.version>1.1.22</woody-thrift.version>
+        <shared.resources.version>0.3.8</shared.resources.version>
+        <serializer.version>0.6.9</serializer.version>
+        <damsell.version>1.430-a1072d0</damsell.version>
+        <messages-proto.version>1.10-391d225</messages-proto.version>
+        <file-storage-proto.version>1.28-281e1ca</file-storage-proto.version>
+        <questionary-proxy-aggr-proto.version>1.11-f1611dc</questionary-proxy-aggr-proto.version>
+        <ank-proto.version>1.22-d638e44</ank-proto.version>
+        <swag-claim-management.version>1.16-acf0795-server</swag-claim-management.version>
+        <swag-dark-api.version>1.55-52667d6-server</swag-dark-api.version>
+        <swag-questionary-aggr.version>1.20-6545299-server</swag-questionary-aggr.version>
+        <swag-questionary.version>1.20-b72644c-server</swag-questionary.version>
+        <swag-messages.version>1.10-60af8f2-server</swag-messages.version>
+        <cabi-proto.version>1.4-61769ca</cabi-proto.version>
+        <swag-cabi.version>1.4-f6e59d6-server</swag-cabi.version>
+        <swag-analytics.version>1.26-95dbdc2-server</swag-analytics.version>
+        <analytics-proto.version>1.12-3b71837</analytics-proto.version>
     </properties>
 
     <dependencies>
@@ -35,17 +51,17 @@
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>custom-actuator-endpoints</artifactId>
-            <version>0.0.1</version>
+            <version>${custom-actuator-endpoints.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>spring-boot-starter-metrics-statsd</artifactId>
-            <version>1.1.0</version>
+            <version>${spring-boot-starter-metrics-statsd.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney.woody</groupId>
             <artifactId>woody-thrift</artifactId>
-            <version>1.1.15</version>
+            <version>${woody-thrift.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
@@ -55,77 +71,77 @@
         <dependency>
             <groupId>com.rbkmoney.geck</groupId>
             <artifactId>serializer</artifactId>
-            <version>0.6.9</version>
+            <version>${serializer.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>damsel</artifactId>
-            <version>${damsel.version}</version>
+            <version>${damsell.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>messages-proto</artifactId>
-            <version>1.10-391d225</version>
+            <version>${messages-proto.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>file-storage-proto</artifactId>
-            <version>1.28-281e1ca</version>
+            <version>${file-storage-proto.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>questionary-proxy-aggr-proto</artifactId>
-            <version>1.11-f1611dc</version>
+            <version>${questionary-proxy-aggr-proto.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>ank-proto</artifactId>
-            <version>1.22-d638e44</version>
+            <version>${ank-proto.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>swag-claim-management</artifactId>
-            <version>1.16-acf0795-server</version>
+            <version>${swag-claim-management.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>swag-dark-api</artifactId>
-            <version>1.55-52667d6-server</version>
+            <version>${swag-dark-api.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>swag-questionary-aggr</artifactId>
-            <version>1.20-6545299-server</version>
+            <version>${swag-questionary-aggr.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>swag-questionary</artifactId>
-            <version>1.20-b72644c-server</version>
+            <version>${swag-questionary.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>swag-messages</artifactId>
-            <version>1.10-60af8f2-server</version>
+            <version>${swag-messages.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>cabi-proto</artifactId>
-            <version>1.4-61769ca</version>
+            <version>${cabi-proto.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>swag-cabi</artifactId>
-            <version>1.4-f6e59d6-server</version>
+            <version>${swag-cabi.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>swag-analytics</artifactId>
-            <version>1.26-95dbdc2-server</version>
+            <version>${swag-analytics.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rbkmoney</groupId>
             <artifactId>analytics-proto</artifactId>
-            <version>1.12-3b71837</version>
+            <version>${analytics-proto.version}</version>
         </dependency>
 
 
@@ -157,12 +173,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.hibernate</groupId>
-                    <artifactId>hibernate-validator</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -184,6 +194,16 @@
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
             <version>2.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.1.6.Final</version>
         </dependency>
 
         <!--test-->
@@ -269,23 +289,6 @@
                     <execution>
                         <goals>
                             <goal>process</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.5</version>
-                <configuration>
-                    <destFile>${sonar.jacoco.reportPaths}</destFile>
-                    <append>true</append>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                 </executions>
