--- a/pom.xml
+++ b/pom.xml
@@ -200,10 +200,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
-            <version>2.27.2</version>
-            <type>pom</type>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-contract-wiremock</artifactId>
+            <version>2.2.4.RELEASE</version>
             <scope>test</scope>
         </dependency>
         <dependency>
